unpackaged/main/default/objects/SLA__c/SLA__c.object-meta.xml
<CustomObject>
    <label>SLA</label>
    <nameField>
        <displayFormat>SLA-{000000}</displayFormat>
        <label>SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>