unpackaged/main/default/objects/SLA__c/fields/RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>RAG_Status__c</fullName>
    <formula>IF(TEXT(RAG__c)=&quot;Red&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lntV&quot;,&quot;&quot;, 50, 50),
IF(TEXT(RAG__c)=&quot;Amber&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lnta&quot;, &quot;&quot;, 50, 50),
IF(TEXT(RAG__c)=&quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lntp&quot;,&quot;&quot;, 50, 50),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG Status</label>
    <type>Text</type>
</CustomField>