unpackaged/main/default/objects/SLA__c/fields/Review_Value__c.field-meta.xml
<CustomField>
    <fullName>Review_Value__c</fullName>
    <label>Review Value</label>
    <type>TextArea</type>
</CustomField>