unpackaged/main/default/objects/SLA__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <type>TextArea</type>
</CustomField>