unpackaged/main/default/objects/SLA__c/fields/SLA_Description__c.field-meta.xml
<CustomField>
    <fullName>SLA_Description__c</fullName>
    <label>SLA Description</label>
    <type>TextArea</type>
</CustomField>