unpackaged/main/default/objects/SLA__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SLAs</relationshipLabel>
    <relationshipName>SLAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>